@@ -36,7 +36,7 @@ dnl
 dnl defines: LIBECASOUND_VERSION, LIBECASOUNDC_VERSION, LIBKVUTILS_VERSION
 dnl ---
 
-LIBECASOUND_VERSION=22
+LIBECASOUND_VERSION=23
 LIBECASOUND_VERSION_AGE=0
 LIBECASOUNDC_VERSION=2
 LIBECASOUNDC_VERSION_AGE=1
